--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "go-captcha-vue",
+  "name": "rtc-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
     "axios": "^0.24.0",
+    "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
-    "lodash": "^4.17.21"
+    "jsencrypt": "^3.3.2",
+    "lodash": "^4.17.21",
+    "qs": "^6.11.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "crypto-js": "^4.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
@@ -35,7 +40,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
